# juce-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEBUGGING.md  PROJECT-SUMMARY.md  README.md  build-tests.sh  build.sh  clean.sh  juce-cmake-template.code-workspace  setup-new-project.sh  zsh.profile
.github/: copilot-instructions.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
assets/: README.md
cmake/: CPM.cmake
docs/: index.md
docs/architecture/: ARCHITECTURE.md
docs/dev/: README.md
docs/issues/: TEMP.md
include/: PluginProcessor.h
lib/: CMakeLists.txt  README.md
scripts/: README.md  build.sh  clean.sh  code-stats.sh  docs.sh  find_todos.sh  generate_docs.sh  run-all-tests.sh  run-tests.sh  run.sh
src/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
tests/: CMakeLists.txt  PluginTests.cpp  README.md  TestMain.cpp
